--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -40,7 +40,7 @@ body {
     background: #FBEFC7;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 2.5vw;
-    border-radius: 5.5vh;
+    border-radius: 0 5.5vh 5.5vh 0;
     outline: none;
     autocomplete: off;
 }
