--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -479,7 +479,7 @@ a:link, a:visited {
     border: 0.5vh solid #3E5902;
 }
 
-#overlay-support, #overlay-user {
+#overlay, #overlay-user {
     position: fixed;
     display: none;
     width: 100%;
