--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -154,7 +154,7 @@
 <footer class="footer">
     <button class="support-button" id="support-btn"><span>Support</span></button>
 
-    <div id="overlay-support" onclick="hideOverlay()"></div>
+    <div id="overlay" onclick="hideOverlay()"></div>
 
     <div class="window" id="popup-window">
         <div class="inner-window">
