removed some unnecessary elements

--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -408,7 +408,7 @@ table td {
     border: 0.46vh solid #3E5902;
 }
 
-#overlay-support {
+#overlay{
     position: fixed;
     display: none;
     width: 100%;
