--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -182,10 +182,8 @@
                 <label for="10" class="fa fa-star"></label>
             </div>
         </div>
-        <button id="rate-btn">
-            <span class="confirmation">
-                <img th:src="@{../images/tick.svg}" src="../../images/tick.svg" alt="quill" class="tick">
-            </span>
+        <button id="rate-btn" class="confirmation">
+            <img th:src="@{../images/tick.svg}" src="../../images/tick.svg" alt="quill" class="tick">
         </button>
     </div>
 </main>
