--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -228,7 +228,7 @@ body {
     margin-bottom: 0.3vh;
     margin-top: 0.3vh;
 }
-.Desserts{
+.dessertI{
     position: absolute;
     width: 6vw;
     height: 4vh;
