--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -97,7 +97,7 @@
     </div>
     <form class="text-form" th:action="@{/api/newComment/{id1}(id1=${id})}" method="post" th:object="${comment}">
         <img th:src="@{../images/quill.svg}" src="../../static/images/quill.svg" alt = "quill" class = "quill">
-            <input name="startWith" th:field="${comment.text}" placeholder="Add comment" type="text">
+            <input name="startWith" maxlength="255" th:field="${comment.text}" placeholder="Add comment" type="text">
         <button id="publish">Publish</button>
     </form>
     <div class="commentField">
