--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -4,17 +4,18 @@
     <title>Recipe</title>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link rel="stylesheet" type="text/css" th:href="@{../css/recipe.css}" href="../../static/css/recipe.css" >
+    <link rel="stylesheet" type="text/css" th:href="@{../css/recipe.css}" href="../../static/css/recipe.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <header>
     <div class="header">
-        <img th:src="@{../images/logo.svg}" src="../../images/logo.svg" alt = "logo" class = "logo">
+        <img th:src="@{../images/logo.svg}" src="../../images/logo.svg" alt="logo" class="logo">
 
         <form class="search-form">
-            <img th:src="@{../images/magnifier.svg}" src="../../static/images/magnifier.svg" alt = "magnifier" class = "magnifier">
-                <input name="query" placeholder="Search" type="search">
+            <img th:src="@{../images/magnifier.svg}" src="../../static/images/magnifier.svg" alt="magnifier"
+                 class="magnifier">
+            <input name="query" placeholder="Search" type="search">
         </form>
         <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
         <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
@@ -42,8 +43,8 @@
     </div>
 </header>
 <main>
-    <img alt="recipeIcon" class="recipeIcon" th:src="@{../images/Recipe.svg}" src="../../images/Recipe.svg" >
-    <div class = "RecipeTitle">
+    <img alt="recipeIcon" class="recipeIcon" th:src="@{../images/Recipe.svg}" src="../../images/Recipe.svg">
+    <div class="RecipeTitle">
         <p class="c3" th:text="${recipe.getTitle()}">Pancakes</p>
     </div>
     <div class="RecipeRating">
@@ -71,12 +72,13 @@
 
     <div class="IngredientTagsField">
         <div class="IngredientTagsTitle">
-            <p class = "c7">Ingredient tags</p>
+            <p class="c7">Ingredient tags</p>
             <div class="ingredientContent">
                 <table th:each="ingedients: ${recipe.getRecipeIngredients()}">
                     <tr>
                         <td>
-                            <a th:href="@{/allRecipes(ingredient=${ingedients.ingredient.getName()})}" th:text="'#' + ${ingedients.ingredient.getName()}"></a>
+                            <a th:href="@{/allRecipes(ingredient=${ingedients.ingredient.getName()})}"
+                               th:text="'#' + ${ingedients.ingredient.getName()}"></a>
                         </td>
                     </tr>
                 </table>
@@ -85,29 +87,30 @@
     </div>
     <div class="IngredientTagsField DeviceTagsField ">
         <div class="IngredientTagsTitle">
-            <p class = "c7 devices">Devices tags</p>
+            <p class="c7 devices">Devices tags</p>
         </div>
         <div class="ingredientContent">
             <table th:each="devices: ${recipe.getRecipeDevices()}">
                 <tr>
                     <td>
-                        <a th:href="@{/allRecipes(device=${devices.cookingDevice.getName()})}" th:text="'#' + ${devices.cookingDevice.getName()}"></a>
+                        <a th:href="@{/allRecipes(device=${devices.cookingDevice.getName()})}"
+                           th:text="'#' + ${devices.cookingDevice.getName()}"></a>
                     </td>
                 </tr>
             </table>
         </div>
     </div>
     <form class="text-form" th:action="@{/api/newComment/{id1}(id1=${id})}" method="post" th:object="${comment}">
-        <img th:src="@{../images/quill.svg}" src="../../static/images/quill.svg" alt = "quill" class = "quill">
-            <input name="startWith" maxlength="255" th:field="${comment.text}" placeholder="Add comment" type="text">
+        <img th:src="@{../images/quill.svg}" src="../../static/images/quill.svg" alt="quill" class="quill">
+        <input name="startWith" maxlength="255" th:field="${comment.text}" placeholder="Add comment" type="text">
         <button id="publish">Publish</button>
     </form>
     <div class="commentField">
         <div th:each="comment, commentStat : ${recipe.getComments()}"
-              th:class="${commentStat.first} ? 'comment comment' : 'comment comment' + ${commentStat.count}"
+             th:class="${commentStat.first} ? 'comment comment' : 'comment comment' + ${commentStat.count}"
              th:style="'top: ' + (${commentStat.index} * 11.5) + 'vh;'">
             <div class="comment-user-circle">
-                <img  id="comment-user" src="../../images/Chef Hat.svg" alt="comment-user" class="comment-user">
+                <img id="comment-user" src="../../images/Chef Hat.svg" alt="comment-user" class="comment-user">
             </div>
             <table>
                 <tbody>
@@ -182,9 +185,11 @@
                 <label for="10" class="fa fa-star"></label>
             </div>
         </div>
-        <button id="rate-btn" class="confirmation">
-            <img th:src="@{../images/tick.svg}" src="../../images/tick.svg" alt="quill" class="tick">
-        </button>
+        <form th:action="@{/api/newRating/{id1}(id1=${id})}" th:object="${rating}" method="post">
+            <button id="rate-btn" class="confirmation">
+                <img th:src="@{../images/tick.svg}" src="../../images/tick.svg" alt="quill" class="tick">
+            </button>
+        </form>
     </div>
 </main>
 
@@ -240,9 +245,9 @@
 
     var button = document.getElementById("rate-btn");
 
-    button.addEventListener("click", function() {
-        var selectedRating = getRating();
-        alert("Selected rating: " + selectedRating)
+    button.addEventListener("click", function () {
+        [[${rating.mark}]] = getRating();
+        // alert("Selected rating: " + selectedRating)
     });
 </script>
 </body>
