--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -78,11 +78,11 @@
         <div class="ul">
             <ul>
                 <a th:href="@{/allRecipes(category= Soup )}">
-                <li><img alt="FirstDishes" class="First-Dishes" th:src="@{images/First dishes.svg}" src="../../static/images/First dishes.svg" >
+                <li><img alt="FirstDishes" class="FirstDishes" th:src="@{images/First dishes.svg}" src="../../static/images/First dishes.svg" >
                     First dishes</li>
                 </a>
                 <hr>
-                <li><img alt="MainDishes" class="Main-Dishes" th:src="@{images/Main dishes.svg}" src="../../static/images/Main dishes.svg" >
+                <li><img alt="MainDishes" class="MainDishes" th:src="@{images/Main dishes.svg}" src="../../static/images/Main dishes.svg" >
                     Main dishes</li>
                 <hr>
                 <li><img alt="Salads" class="Salads" th:src="@{images/Salads.svg}" src="../../static/images/Salads.svg" >
@@ -91,7 +91,7 @@
                 <li><img alt="Pastry" class="Pastry" th:src="@{images/Pastry.svg}" src="../../static/images/Pastry.svg" >
                     Pastry</li>
                 <hr>
-                <li><img alt="Desserts" class="Desserts" th:src="@{images/Desserts.svg}" src="../../static/images/Dessert.svg" >
+                <li><img alt="Desserts" class="Desserts" th:src="@{images/Desserts.svg}" src="../../static/images/Desserts.svg" >
                     Desserts</li>
                 <hr>
                 <li><img alt="Drinks" class="Drinks" th:src="@{images/Drinks.svg}" src="../../static/images/Drinks.svg" >
@@ -115,7 +115,7 @@
         <div class="dessert">
             <img alt="cheesecake" class="cheesecake" th:src="@{images/dessert.jpg}" src="../../static/images/dessert.jpg" >
             <div class="rectangle rectangle-left-1">
-                <img alt="Desserts" class="Desserts" th:src="@{images/Desserts.svg}" src="../../static/images/Dessert.svg" >Desserts
+                <img alt="Desserts" class="Desserts" th:src="@{images/Desserts.svg}" src="../../static/images/Desserts.svg" >Desserts
             </div>
         </div>
 
@@ -137,14 +137,14 @@
     <div class="firstD">
         <img alt="firstDish" class="firstDish" th:src="@{images/firstD.jpg}" src="../../static/images/firstD.jpg">
         <div class="rectangleFD rectangleFD-left">
-            <img alt="FirstDishes" class="First-Dishes" th:src="@{images/First dishes.svg}" src="../../static/images/First dishes.svg" >First dishes
+            <img alt="FirstDishes" class="FirstDishes" th:src="@{images/First dishes.svg}" src="../../static/images/First dishes.svg" >First dishes
         </div>
     </div>
 
     <div class="mainD">
         <img alt="mainDish" class="mainDish" th:src="@{images/mainD.jpg}" src="../../static/images/Main dishes.jpg">
         <div class="rectangleMD rectangleMD-left">
-            <img alt="MainDishes" class="Main-Dishes" th:src="@{images/Main dishes.svg}" src="../../static/images/Main dishes.svg" >Main dishes
+            <img alt="MainDishes" class="MainDishes" th:src="@{images/Main dishes.svg}" src="../../static/images/Main dishes.svg" >Main dishes
         </div>
     </div>
 
