--- a/src/main/resources/templates/user/test.html
+++ b/src/main/resources/templates/user/test.html
@@ -61,7 +61,7 @@
                         Main dishes</li>
                     <li><img alt="salad" class="saladI" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >
                         Salads</li>
-                    <li><img alt="pastry" class="pastryI" th:src="@{images/PastryI.svg}" src="../../static/images/Pastry.svg" >
+                    <li><img alt="pastry" class="pastryI" th:src="@{images/Pastry.svg}" src="../../static/images/Pastry.svg" >
                         Pastry</li>
                     <li><img alt="dessertI" class="dessertI" th:src="@{images/Waffles.svg}" src="../../static/images/Waffles.svg" >
                         Desserts</li>
