--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -61,34 +61,38 @@ body {
     justify-content: center;
     align-items: center;
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.25vh;
     font-size: 1.25vw;
     text-decoration: none;
 }
 
-.heart, .user {
+.heart img, .user img{
     width: 3.6458vw;
     height: 5.5555vh;
 }
 
-.heart-container, .user-container {
+.heart-container, .user-container, .heart-login-container, .user-login-container {
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+    cursor: pointer;
+    pointer-events: auto;
+    border: none;
+    background-color: #F2E3B3;
 }
 
-.heart-container:hover {
+.user-container:hover, .user-login-container {
+    background-color: #733506;
+    width: 4.6vw;
+    height: 9.2593vh;
+}
+
+.heart-container:hover{
     cursor: not-allowed;
-    background-color: #733506;
-    width: 4.6vw;
-    height: 9.2593vh;
 }
 
-.user-container:hover {
-    background-color: #733506;
-    width: 4.6vw;
-    height: 9.2593vh;
+.heart-login-container:hover{
+    background-color: #B90F0F;
 }
 
 .home{
@@ -576,7 +580,7 @@ body {
     z-index: 5;
 }
 
-#overlay {
+#overlay, #overlay-user {
     position: fixed;
     display: none;
     width: 100%;
@@ -611,6 +615,75 @@ body {
     padding-left: 0.01vw;
     border-radius: 2.25vh;
     z-index: 13;
+}
+
+.login-window {
+    position: fixed;
+    display: none;
+    border-radius: 2.7vw;
+    width: 26vw;
+    height: 30vh;
+    left: 72.9vw;
+    bottom: 59.7vh;
+    background-color: #F2E3B3;
+    z-index: 11;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.login-form {
+    border-radius: 2.7vw;
+    position: absolute;
+    width: 21vw;
+    height: 4.5vh;
+    z-index: 13;
+    left: 1.5vw;
+}
+
+.email {
+    top: 7vh;
+}
+
+.password {
+    top: 14.8vh;
+}
+
+.login-heading {
+    position: absolute;
+    right: 9.58vw;
+    bottom: 21.5vh;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2vw;
+}
+
+.email input, .password input {
+    width: 21.979vw;
+    height: 6.19vh;
+    flex: 1;
+    border: none;
+    background: #FBEFC7;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2vh;
+    font-size: 2vw;
+    border-radius: 5.5vh;
+    outline: none;
+    padding-left: 1vw;
+}
+
+#confirm-button {
+    background-color: #3E5902;
+    position: absolute;
+    width: 15.6vw;
+    height: 5vh;
+    right: 5.2vw;
+    bottom: 1.7vh;
+    z-index: 15;
+    border-radius: 2.7vw;
+    cursor: pointer;
+    text-align: center;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2vw;
+    color: #FBEFC7;
+    border: none;
 }
 
 #send-button {
